# Mop

./: .gitignore  AUTHORS  AUTHORS.rst  MANIFEST.in  Makefile  Mop.desktop.in  README.md  README.rst  parcyl.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
data/: Mop.desktop.in  MopFix.desktop.in  map.desktop
mop/: __about__.py  __main__.py  app.py  config.py  core.py  dialogs.py  dialogs.ui  editorctl.py  filesctl.py  mop.ui  utils.py
mop/editor/: __init__.py  abc.py  common.py  ctl.py
requirements/: dev.txt  install.txt  requirements.txt  test.txt
